Fix footer z-index problem

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ header .logo {
 
 footer {
   bottom: 0;
+  z-index: 5;
 }
 
 footer a {
